# local_video_transmitter

./: README.md
cpp/: CMakeLists.txt  receiver.cpp  sender.cpp
python/: receiver.py  sender.py
